--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@ const data = {
 "유흥주점":[
 { 
   name:{ text:"호객행위", depth:0 },
-  law:{ text:"경범죄처벌법", depth:1 },
+  law:[
+    { text:"식품위생법 제44조 제1항 7호 ", depth:1 },
+    { text:"식품위생법 제44조 제1항 7호 ", depth:1 }
+     ],
   penalty:{ text:"10만원 이하 벌금", depth:2 },
 
   note:[
