--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ const data = {
 
   law:[
     { text:"감염병의 예방 및 관리에 관한 법률 제19조", depth:2 },
-    { text:"성매개감염병 및 후천성면역결핍증 건강진단규칙 제3조(별표-3)", depth:2 }
+    { text:"성매개감염병 및 후천성면역결핍증 건강진단규칙 제3조(별표-3)", depth:2 },
     { text:"식품위생법 제101조 제4항 3호", depth:2 },
     { text:"식품위생법시행규칙 제2항 1호", depth:2 }
   ],
