--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ button.activeViolation{
       <button onclick="selectIndustry('숙박업', event)">숙박업</button>
       <button onclick="selectIndustry('목욕장업', event)">목욕장업</button>
       <button onclick="selectIndustry('게임제공업', event)">게임제공업</button>
-      <button onclick="selectIndustry('당구장·스크리골프장·크레인', event)">당구장·스크리골프장·크레인</button>
+      <button onclick="selectIndustry('당구장·스크린골프장·크레인', event)">당구장·스크린골프장·크레인</button>
   </div>
 </div>
 
