--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ function toggleViolation(btn, obj){
     if(url){
       html += `
         <span class="depth" style="margin-left:${l.depth*20}px;">
-          🔗 <a href="${url}" target="_blank"
+           <a href="${url}" target="_blank"
                style="color:#1e90ff;font-weight:600;text-decoration:underline;">
             ${l.text}
           </a>
