--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ button.activeViolation{
 </head>
 <body>
 
-<h2 style="text-align:center; margin-top:0; padding:1rem 0; font-size:1.8rem;">풍속업소 단속 메뉴얼</h2>
+<h2 style="text-align:center; margin-top:0; padding:1rem 0; font-size:1.8rem;">풍속업소 단속 법규</h2>
 
 <!-- 1단계 -->
 <div class="box">
