--- a/index.html
+++ b/index.html
@@ -337,13 +337,15 @@ function toggleViolation(btn, obj){
 
 </script>
 
-<div style="text-align: center;">
-  <button 
-    style="padding:12px 20px; font-size:16px; background:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;"
-    onclick="window.open('https://tally.so/r/PdplQd', '_blank');"
-  >
-    의견 제출
-  </button>
+<div style="text-align:center;">
+  <div style="display:inline-block;">
+    <button 
+      style="padding:12px 20px; font-size:16px; background:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;"
+      onclick="window.open('https://tally.so/r/PdplQd', '_blank');"
+    >
+      의견 제출
+    </button>
+  </div>
 </div>
   
 
