--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ function toggleViolation(btn, obj){
   <div style="display:inline-block;">
     <button 
       style="padding:12px 20px; font-size:16px; background:#007bff; color:white; border:none; border-radius:6px; cursor:pointer;"
-      onclick="window.open('https://tally.so/r/PdplQd', '_blank');"
+      onclick="window.open('https://tally.so/r/ODlqG8', '_blank');"
     >
       의견 제출
     </button>
